# dfds-ds-toolbox

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  azure-pipelines-build.yml  azure-pipelines.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: release.yml
.github/workflows/: code_coverage.yml  precommit-PR.yml  python-publish.yml
dfds_ds_toolbox/analysis/: plotting.py  plotting_utils.py
dfds_ds_toolbox/feature_selection/: feat_selector.py
dfds_ds_toolbox/logging/: logging.py
dfds_ds_toolbox/profiling/: profiling.py
docs/: conf.py  ds_toolbox.analysis.rst  ds_toolbox.feature_extraction.rst  ds_toolbox.feature_selection.rst  ds_toolbox.model_selection.rst  ds_toolbox.profiling.rst  ds_toolbox.rst  index.rst  modules.rst  requirements.txt  usage.rst
ds-toolbox/model_selection/: model_selection.py
ds-toolbox/tests/: test_starter.py
ds_toolbox/: exeptions.py
ds_toolbox.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ds_toolbox/analysis/: EDA_example.ipynb  plotting.py  plotting_utils.py
ds_toolbox/analysis/tests/: test_plotting.py
ds_toolbox/feature_selection/: feat_selector.py  feat_selector_example.ipynb
ds_toolbox/feature_selection/tests/: test_feat_selector.py
ds_toolbox/logging/: logging.py
ds_toolbox/logging/tests/: test_logging.py
ds_toolbox/model_selection/: model_selection.py  model_selection_example.ipynb
ds_toolbox/model_selection/tests/: test_model_selection.py
ds_toolbox/profiling/: profiling.py
ds_toolbox/profiling/tests/: test_profiling.py
ds_toolbox/tests/: test_starter.py
examples/: README.rst  plot_classification_histogram.py  plot_gain.py  plot_lift.py  plot_regression_results.py  plot_roc.py  plot_univariate.py
tests/: test_feat_selector.py  test_logging.py  test_model_selection.py  test_plotting.py  test_profiling.py
